--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -143,10 +143,13 @@
 	min-width: 100%;
 }
 .help-block{
-    color: red;
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
 }
 input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
-    border: 1px solid red;
+    border: 1px solid #dc3545;
 }
 .formarray_btn{
 	font-size: large;
