--- a/src/app/application-onboarding/create-account/create-account.component.less
+++ b/src/app/application-onboarding/create-account/create-account.component.less
@@ -1,6 +1,9 @@
-.help-block{
-    color: red;
-}
 input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
-    border: 1px solid red;
+    border: 1px solid #dc3545;
+}
+.help-block{
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
 }
