--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -100,11 +100,8 @@
     	color: #858585;
 	}
 }
-.help-block{
-    color: red;
-}
 input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
-    border: 1px solid red;
+    border: 1px solid #dc3545;
 }
 .addFilter{
 	text-align: center;
