--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -81,11 +81,8 @@
         overflow: auto;
     }
 }
-.help-block{
-    color: red;
-}
 input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
-    border: 1px solid red;
+    border: 1px solid #dc3545;
 }
 .disabledMenu{
 	opacity: 0.3;
