Changes related to handle error when no policy is exist in policy management

--- a/src/app/release/release.component.html
+++ b/src/app/release/release.component.html
@@ -107,7 +107,7 @@
                         <tr>
                           <th>Service</th>
                           <th>Image ID</th>
-                          <th>Container ID</th>
+                          <th>Tag</th>
                         </tr>
                         <tr *ngFor="let rel of ChildList;let i = index">
                             <td>{{rel.serviceName}}</td>
