--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
@@ -54,3 +54,12 @@ tbody{
     cursor: pointer;
     color: #0ea4fb;
 }
+.disabledbtn{
+	pointer-events: none;
+	opacity: 0.4;
+}
+.disabledFooter{
+	pointer-events: none;
+    opacity: 0.4;
+    background: #f5f6f7;
+}
