--- a/src/app/application-dashboard/application-dashboard.component.html
+++ b/src/app/application-dashboard/application-dashboard.component.html
@@ -104,7 +104,7 @@
               </thead>
               <tbody>
                 <tr *ngFor="let service of serviceData; let i=index">
-                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a target="_blank" [href]="service.status === 'N/A' ? '': redirectLink(service.name,selectedApplicationName)">{{service.name}}</a></td>
+                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a target="_blank" href="{{service.href}}">{{service.name}}</a></td>
                   <td>{{service.score}}</td>
                   <td
                     [ngClass]="{'text-danger':service.status == 'FAIL' || service.status == 'TERMINAL','text-success':service.status == 'PASS'|| service.status == 'SUCCEEDED'}">
