--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -335,7 +335,7 @@
             </div>
             <!-- /.card-body -->
             <div class="card-footer table-footer px-3 py-2">
-              <div class="form-inline">
+              <div class="form-inline {{searchData !== ''?'disabledFooter':''}}">
                 <span class="mr-2">Per page</span>
                 <select class="form-control" [(ngModel)]="perPageData" (change)="onChangePerPageData()">
                   <option value="10">10</option>
@@ -344,7 +344,7 @@
                   <option value="25">25</option>
 
                 </select>
-                <span class="ml-3 mr-2">Showing {{page.startingPoint+1}} to
+                <span class="ml-3 mr-2">Showing {{currentDatalength>0?page.startingPoint+1:0}} to
                   {{page.endPoint < currentDatalength && page.endPoint > page.startingPoint ? page.endPoint:currentDatalength}}
                   of
                   {{currentDatalength}}</span>
@@ -352,7 +352,7 @@
                 <button class="btn btn-primary">Go</button> -->
 
                 <ul class="pagination ml-auto mb-0">
-                  <li class="page-item" (click)="pagePrev()"><a class="page-link">Previous</a></li>
+                  <li class="page-item" (click)="pagePrev()" class = "{{page.startingPoint === 0?'disabledbtn':''}}"><a class="page-link">Previous</a></li>
                   <li class="page-item {{page.currentPage === page.pageNo ? 'active' : ''}}"
                     (click)=showPage(page.currentPage)><a class="page-link">{{page.currentPage}}</a></li>
                   <li class="page-item {{page.currentPage+1 === page.pageNo ? 'active' : ''}}" *ngIf="(page.pageNo*page.pageSize) < currentDatalength || 
@@ -363,7 +363,7 @@
                              page.currentPage+2 == page.pageNo ||
                              ((page.currentPage+2)*page.pageSize< currentDatalength? true : ((page.currentPage+2)*page.pageSize)-currentDatalength < page.pageSize? true : false) ? true : false"
                     (click)=showPage(page.currentPage+2)><a class="page-link">{{page.currentPage+2}}</a></li>
-                  <li class="page-item" (click)="pageNext()"><a class="page-link">Next</a></li>
+                  <li class="page-item" (click)="pageNext()" class = "{{page.endPoint === currentDatalength?'disabledbtn':''}}"><a class="page-link">Next</a></li>
                 </ul>
               </div>
               <!-- /.per_page -->
