--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -108,3 +108,12 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
     color: #858585;
     font-size: initial;
 }
+.disabledbtn{
+	pointer-events: none;
+	opacity: 0.4;
+}
+.disabledFooter{
+	pointer-events: none;
+    opacity: 0.4;
+    background: #f5f6f7;
+}
