--- a/src/app/application-onboarding/data-source/docker-form/docker-form.component.html
+++ b/src/app/application-onboarding/data-source/docker-form/docker-form.component.html
@@ -32,6 +32,7 @@
     <div></div>
     <div class="modal-footer">
         <button type="submit" class="btn btn-default" type="reset" (click)="onReset()" data-dismiss="modal" aria-label="Close">Cancel</button>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button *ngIf="form_type === 'new'" type="submit" class="btn btn-primary">Save</button>
+        <button *ngIf="form_type === 'edit'" type="submit" class="btn btn-primary">Update</button>
       </div>
 </form>
