--- a/src/app/application-onboarding/data-source/github-form/github-form.component.html
+++ b/src/app/application-onboarding/data-source/github-form/github-form.component.html
@@ -1,19 +1,19 @@
 <form [formGroup]="gitForm" (ngSubmit)="onSubmit()">
     <div class="form-row">
         <div class="form-group col-5">
-            <label>End Point</label>
-            <input type="text" formControlName="endPoint" class="form-control" [ngClass]="{ 'is-invalid': submitted && g.endPoint.errors }" />
-            <div *ngIf="submitted && g.endPoint.errors" class="invalid-feedback">
-                <div *ngIf="g.endPoint.errors.required">Endpoint is required</div>
-            </div>
-        </div>
-        <div class="form-group col-5">
             <label>Account Name</label>
             <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && g.name.errors }" />
             <div *ngIf="submitted && g.name.errors" class="invalid-feedback">
                 <div *ngIf="g.name.errors.required">Account Name is required</div>
                 <div *ngIf="g.name.errors.accountExist">Account already
                     exists with same name. Please choose a unique account name</div>
+            </div>
+        </div>
+        <div class="form-group col-5">
+            <label>End Point</label>
+            <input type="text" formControlName="endPoint" class="form-control" [ngClass]="{ 'is-invalid': submitted && g.endPoint.errors }" />
+            <div *ngIf="submitted && g.endPoint.errors" class="invalid-feedback">
+                <div *ngIf="g.endPoint.errors.required">Endpoint is required</div>
             </div>
         </div>
     </div>
@@ -66,6 +66,8 @@
     <div></div>
     <div class="modal-footer">
         <button type="submit" class="btn btn-default" type="reset" (click)="onReset()" data-dismiss="modal" aria-label="Close">Cancel</button>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button *ngIf="form_type === 'new'" type="submit" class="btn btn-primary">Save</button>
+        <button *ngIf="form_type === 'edit'" type="submit" class="btn btn-primary">Update</button>
+
       </div>
 </form>
